Modified to use Liferay user details

--- a/portlets/InvoiceSample-portlet/src/main/webapp/WEB-INF/sql/indexes.properties
+++ b/portlets/InvoiceSample-portlet/src/main/webapp/WEB-INF/sql/indexes.properties
@@ -1,3 +1,4 @@
 IX_4E6ECBA3=Invoice_Consumer.ConsumerName
 
 IX_91742146=Invoice_Invoice.InvoiceForConsumer
+IX_CD06601B=Invoice_Invoice.InvoiceForUser
