Added a boot strap theme

--- a/portlets/InvoiceSample-portlet/src/main/resources/portlet.properties
+++ b/portlets/InvoiceSample-portlet/src/main/resources/portlet.properties
@@ -1,4 +1,4 @@
 env.apiClientId=855fd8f1-8604-4e38-93a7-10555cb1b9dc 
 env.apiClientSecret=893e54bc-76f1-4bef-8ea6-2fc473b1573f
-personAPIUrl=http://api.covisintlabs.com/person/v1/persons/
-tokenAPIUrl=http://api.covisintlabs.com/oauth/v1/token
+personAPIUrl=https://api.covisintlabs.com/person/v1/persons/
+tokenAPIUrl=https://api.covisintlabs.com/oauth/v1/token
