Registration Status screen updated

--- a/android/OpenRegistration/app/src/main/AndroidManifest.xml
+++ b/android/OpenRegistration/app/src/main/AndroidManifest.xml
@@ -70,15 +70,11 @@
             android:name=".PackageSelectionActivity"
             android:label="@string/title_activity_package_selection"
             android:theme="@style/AppTheme.PasswordAccountInput" >
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
         </activity>
         <activity
             android:name=".RegistrationCompleteActivity"
-            android:label="@string/title_activity_security_question" >
+            android:label="@string/title_activity_security_question"
+            android:theme="@style/AppTheme.RegistrationStatus" >
         </activity>
     </application>
 
