--- a/http-api-clients/src/main/resources/client.conf
+++ b/http-api-clients/src/main/resources/client.conf
@@ -6,3 +6,6 @@ clientId=d783223b-6075-4e46-8825-a60ebf55f5fc
 
 # Application's client secret.
 clientSecret=f999661f-aa1e-4045-bb6a-1f91b623e294
+
+# Application id.
+applicationId=pBqu7PjlbG9LG9bONPdAlDs4wfhsXIaR
