Correct code samples after SDK interface clean-up.

--- a/http-api-clients/src/main/resources/client.conf
+++ b/http-api-clients/src/main/resources/client.conf
@@ -1,11 +1,8 @@
 # Base URL of the OAuth service.
-authServiceBaseUrl=https://api.covisintrnd.com/oauth/v1
+authServiceBaseUrl=https://api.covapp.io/oauth/v1
 
-# Application's client id.
-clientId=d783223b-6075-4e46-8825-a60ebf55f5fc
+applicationId=2fhV6fj3aFPWxzTd0bSBlifxxOAoAit5
 
-# Application's client secret.
-clientSecret=f999661f-aa1e-4045-bb6a-1f91b623e294
+clientId=d00f647c-164b-4341-b890-5d5d4041800a
 
-# Application id.
-applicationId=pBqu7PjlbG9LG9bONPdAlDs4wfhsXIaR
+clientSecret=283597e9-ef17-4fb1-b28d-63a76bc74acb
