--- a/php/includes/setting.ini
+++ b/php/includes/setting.ini
@@ -1,8 +1,7 @@
 ; Copyright (C) 2014 Covisint.
-; Author: Pradeep Patro <pradeep.patro@happiestminds.com>
+; Author: Covisint
 
 [global]
-realm="ALIAS162-DEV"
 app_id="jlmMCCGIqTl4AOo3qN1xKlb11AZliXGO"
 client_id="59cf3f49-0a21-4e13-898d-f447441b88ad"
 client_secret="ec898026-0175-45b5-a4a4-8b9d90800b86"
