Minor PHP fixes

--- a/php/includes/country.ini
+++ b/php/includes/country.ini
@@ -1,5 +1,5 @@
 ; Copyright (C) 2014 Covisint.
-; Author: Pradeep Patro <pradeep.patro@happiestminds.com>
+; Author: Covisint
 
 id[]="AF"
 phoneIndex[]="+93"
